<resources>
    <string name="app_name">ECL</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="electoral_literacy_club">Electoral Literacy Club</string>
    <string name="enter_institution_id">Enter Institution ID</string>
    <string name="login">LOGIN</string>
    <string name="enter_description">Enter Description</string>
    <string name="select_date_time"><![CDATA[Select Date & Time]]></string>
    <string name="submit">SUBMIT</string>
</resources>
