<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ceo.ecl.viewModel.LoginViewModel" />
    </data>

   <!-- <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

           <!-- <include layout="@layout/layout_toolbar" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/_10sdp"
                android:text="@string/electoral_literacy_club"
                android:textSize="@dimen/_18sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_40sdp"
                android:background="@color/titleTextColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:background="@drawable/form_back"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="@dimen/_20sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/et_back"
                    android:hint="@string/enter_institution_id"
                    android:maxLines="1"
                    android:text="@={viewModel.instID}"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_16sdp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/btn_back"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/login"
                    android:onClick="@{()-> viewModel.onLoginClicked()}"
                    bind:toastMessage="@{viewModel.toastMessage}"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    <!--</ScrollView>-->

</layout>