<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ceo.ecl.viewModel.CreatEventViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/layout_toolbar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/_10sdp"
                android:text="@string/electoral_literacy_club"
                android:textSize="@dimen/_18sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/titleTextColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:background="@drawable/form_back"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp">

                <!--event date & time-->
               <!-- <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/et_back"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/select_date_time"
                    android:text="@={viewModel.eventDate}"
                    android:gravity="center"
                    android:onClick="@{()-> viewModel.onEventClicked()}"
                    bind:toastMessage="@{viewModel.toastMessage}"
                    android:textStyle="bold" />-->

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:id="@+id/birth_date"
                    android:text="@={viewModel.dateToString(viewModel.eventDate)}"
                    />

                <!--description-->
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/et_back"
                    android:hint="@string/enter_description"
                    android:maxLines="1"
                    android:gravity="start"
                    android:text="@={viewModel.desc}"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_16sdp" />

                <!--submit-->
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/btn_back"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/submit"
                    android:onClick="@{()-> viewModel.onSubmitClicked()}"
                    bind:toastMessage="@{viewModel.toastMessage}"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</layout>